# cray

./: Cargo.toml
src/: bsdf.rs  bssrdf.rs  image.rs  lib.rs  macros.rs  main.rs  media.rs  mipmap.rs  options.rs  phase.rs  render.rs  sampler.rs  texture.rs
src/bxdf/: conductor.rs  dielectric.rs  diffuse.rs  diffuse_transmission.rs  layered.rs  mod.rs  normalized_fresnel.rs  thin_dielectric.rs
src/camera/: film.rs  filter.rs  mod.rs  projective.rs
src/color/: cie.rs  colorspace.rs  mod.rs  named_spectrum.rs  rgb_to_spectra.rs  rgb_xyz.rs  sampled.rs  spectrum.rs  wavelengths.rs
src/file/: mod.rs
src/integrator/: mod.rs  path.rs  random_walk.rs  simple_path.rs  simple_vol_path.rs  vol_path.rs
src/light/: diffuse_area.rs  image_infinite.rs  mod.rs  point.rs  portal_image_infinite.rs  uniform_infinite.rs
src/light/sampler/: bvh.rs  mod.rs  uniform.rs
src/material/: coated_conductor.rs  coated_diffuse.rs  conductor.rs  debug.rs  dielectric.rs  diffuse.rs  diffuse_transmission.rs  mod.rs  thin_dielectric.rs
src/math/: assert.rs  bivec.rs  dim.rs  frame.rs  hashing.rs  interaction.rs  interval.rs  lowdiscrepancy.rs  mat.rs  mod.rs  numeric.rs  primes.rs  ray.rs  sampling.rs  scattering.rs  sobol.rs  sphere.rs  swizzle.rs  tile.rs  transform.rs  vec2d.rs  vect.rs
src/math/bounds/: bounds2.rs  bounds3.rs  direction.rs  mod.rs
src/media/: grid.rs  homogeneous.rs  iterator.rs  mod.rs  preset.rs  rgb.rs
src/primitive/: bvh.rs  geometric.rs  list.rs  mod.rs  simple.rs  transformed.rs
src/reader/: error.rs  mod.rs  param.rs  paramdict.rs  parser.rs  scene.rs  target.rs  token.rs  tokenizer.rs  utils.rs
src/shape/: bilinear_patch.rs  mesh.rs  mod.rs  sphere.rs  triangle.rs
tests/: image.rs
