[package]
name = "rusty-pbr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "math-assert" ]
math-assert = []

[dependencies]
approx = "0.5.1"
auto_ops = "0.3.0"

[dev-dependencies]
# For comparison
glam = { version = "0.27.0", features = [ "approx" ] }
