[package]
name = "rusty-pbrt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "math-assert" ]
math-assert = []

[dependencies]
approx = "0.5.1"
auto_ops = "0.3.0"
once_cell = "1.19.0"
tracing = "0.1.40"
ordered-float = "4.2.0"
fast_polynomial = "0.1.0"
rgb2spec = "0.1.1"
half = "2.4.1"
arrayvec = "0.7.4"
png = "0.17.13"
thiserror = "1.0.61"
itertools = "0.13.0"
pdqselect = "0.1.1"
rand = { version = "0.8.5", features = [ "small_rng" ] }
num = "0.4.3"
bitflags = "2.6.0"

[dev-dependencies]
# For comparison
glam = { version = "0.28.0", features = [ "approx" ] }
float-cmp = "0.9.0"
rand = "0.8.5"
