[package]
name = "cray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
use_f64 = []

[dependencies]
approx = "0.5.1"
auto_ops = "0.3.0"
once_cell = "1.19.0"
tracing = "0.1.40"
ordered-float = "4.2.0"
fast_polynomial = "0.3.0"
rgb2spec = "0.1.1"
half = "2.4.1"
arrayvec = "0.7.4"
png = "0.17.13"
exr = "1.72.0"
thiserror = "1.0.61"
itertools = "0.13.0"
pdqselect = "0.1.1"
rand = { version = "0.8.5", features = [ "small_rng" ] }
num = "0.4.3"
bitflags = "2.6.0"
clap = { version = "4.5.16", features = [ "derive" ] }
string-interner = "0.17.0"
bumpalo = "3.16.0"
thread_local = "1.1.8"
rayon = "1.10.0"
indicatif = { version = "0.17.8", features = [ "rayon" ] }
console = "0.15.8"

[dev-dependencies]
# For comparison
glam = { version = "0.28.0", features = [ "approx" ] }
float-cmp = "0.9.0"

[profile.release]
lto = true
codegen-units = 1
